--- a/config/database.yml
+++ b/config/database.yml
@@ -4,10 +4,15 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  reconnect: false
+  database: dbendt9sjma430
+  host: ec2-54-243-125-2.compute-1.amazonaws.com
+  port: 5432
   pool: 5
-  timeout: 5000
+  username: aeqwsvwfferzdm
+  password: 8M63dWZ_FbpTblX1hlvymL67Z
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
