--- a/config/database.yml
+++ b/config/database.yml
@@ -4,15 +4,10 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: postgresql
-  encoding: utf8
-  reconnect: false
-  database: dbendt9sjma430
-  host: ec2-54-243-125-2.compute-1.amazonaws.com
-  port: 5432
+  adapter: sqlite3
+  database: db/development.sqlite3
   pool: 5
-  username: aeqwsvwfferzdm
-  password: 8M63dWZ_FbpTblX1hlvymL67Z
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -24,7 +19,12 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  reconnect: false
+  database: dbendt9sjma430
+  host: ec2-54-243-125-2.compute-1.amazonaws.com
+  port: 5432
   pool: 5
-  timeout: 5000
+  username: aeqwsvwfferzdm
+  password: 8M63dWZ_FbpTblX1hlvymL67Z
